--- a/themes/raiser/sass/base/_base.scss
+++ b/themes/raiser/sass/base/_base.scss
@@ -97,6 +97,7 @@ form {
     -moz-appearance: none;
     appearance: none;
     background: transparent url(../images/select.png) no-repeat 97% center;
+    background-size: 0.5em;
     border-radius: 4px;
     border: 2px solid $primary;
     color: $primary;
