--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -1584,8 +1584,12 @@ body.front #main #content {
   background: #ffab30;
 }
 
-/* line 3, ../sass/components/_campaign-team-individual-list.scss */
-.page-campaigns .views-row {
+/* line 2, ../sass/components/_campaign-team-individual-list.scss */
+.page-redhen-campaign-pages .main-content-wrapper {
+  width: 100%;
+}
+/* line 5, ../sass/components/_campaign-team-individual-list.scss */
+.page-redhen-campaign-pages .views-row {
   -webkit-box-shadow: 0 3px 5px #989898;
   -moz-box-shadow: 0 3px 5px #989898;
   box-shadow: 0 3px 5px #989898;
@@ -1595,20 +1599,20 @@ body.front #main #content {
   padding-bottom: 2em;
   padding-top: 1em;
 }
-/* line 12, ../sass/components/_campaign-team-individual-list.scss */
-.page-campaigns .views-row h2 {
+/* line 14, ../sass/components/_campaign-team-individual-list.scss */
+.page-redhen-campaign-pages .views-row h2 {
   font-size: 1.125em;
   line-height: 1em;
   margin-top: 0;
   padding: 0 1em;
   text-align: left;
 }
-/* line 19, ../sass/components/_campaign-team-individual-list.scss */
-.page-campaigns .views-row h2 a {
+/* line 21, ../sass/components/_campaign-team-individual-list.scss */
+.page-redhen-campaign-pages .views-row h2 a {
   color: #5e9733;
 }
-/* line 21, ../sass/components/_campaign-team-individual-list.scss */
-.page-campaigns .views-row .redhen_campaign_page_team {
+/* line 23, ../sass/components/_campaign-team-individual-list.scss */
+.page-redhen-campaign-pages .views-row .redhen_campaign_page_team {
   padding-left: 1.375em;
   margin-top: 0.5em;
   line-height: 1;
@@ -1617,72 +1621,72 @@ body.front #main #content {
   bottom: 0.75em;
   font-size: 0.75em;
 }
-/* line 31, ../sass/components/_campaign-team-individual-list.scss */
-.page-campaigns .views-row .field-name-redhen-campaign-goal {
+/* line 33, ../sass/components/_campaign-team-individual-list.scss */
+.page-redhen-campaign-pages .views-row .field-name-redhen-campaign-goal {
   color: #5e9733;
   font-size: 1.375em;
   padding-left: 0.75em;
 }
-/* line 35, ../sass/components/_campaign-team-individual-list.scss */
-.page-campaigns .views-row .field-name-redhen-campaign-goal .rhc_progress {
+/* line 37, ../sass/components/_campaign-team-individual-list.scss */
+.page-redhen-campaign-pages .views-row .field-name-redhen-campaign-goal .rhc_progress {
   display: inline;
   font-size: 1em;
 }
-/* line 41, ../sass/components/_campaign-team-individual-list.scss */
-.page-campaigns .views-row .redhen-contact-contact {
+/* line 43, ../sass/components/_campaign-team-individual-list.scss */
+.page-redhen-campaign-pages .views-row .redhen-contact-contact {
   margin: 0 1em 1em 1em;
   display: block;
   text-align: center;
   float: none;
 }
-/* line 46, ../sass/components/_campaign-team-individual-list.scss */
-.page-campaigns .views-row .redhen-contact-contact img {
+/* line 48, ../sass/components/_campaign-team-individual-list.scss */
+.page-redhen-campaign-pages .views-row .redhen-contact-contact img {
   border-radius: 0.5em;
   -webkit-box-shadow: 0 3px 5px #989898;
   -moz-box-shadow: 0 3px 5px #989898;
   box-shadow: 0 3px 5px #989898;
   width: 100%;
 }
-/* line 55, ../sass/components/_campaign-team-individual-list.scss */
-.page-campaigns .views-row .redhen_campaign_page_campaign,
-.page-campaigns .views-row .redhen_campaign_page_title {
+/* line 57, ../sass/components/_campaign-team-individual-list.scss */
+.page-redhen-campaign-pages .views-row .redhen_campaign_page_campaign,
+.page-redhen-campaign-pages .views-row .redhen_campaign_page_title {
   font-size: 1em;
   margin-left: 1em;
   margin-top: 0;
   width: 80%;
 }
-/* line 64, ../sass/components/_campaign-team-individual-list.scss */
-.page-campaigns .views-row .redhen-campaign-page-team .field-name-field-logo {
+/* line 66, ../sass/components/_campaign-team-individual-list.scss */
+.page-redhen-campaign-pages .views-row .redhen-campaign-page-team .field-name-field-logo {
   margin: 0 1em 1em 1em;
   float: none;
 }
-/* line 67, ../sass/components/_campaign-team-individual-list.scss */
-.page-campaigns .views-row .redhen-campaign-page-team .field-name-field-logo img {
+/* line 69, ../sass/components/_campaign-team-individual-list.scss */
+.page-redhen-campaign-pages .views-row .redhen-campaign-page-team .field-name-field-logo img {
   border-radius: 0.5em;
   -webkit-box-shadow: 0 3px 5px #989898;
   -moz-box-shadow: 0 3px 5px #989898;
   box-shadow: 0 3px 5px #989898;
   width: 100%;
 }
-/* line 76, ../sass/components/_campaign-team-individual-list.scss */
-.page-campaigns .views-row .clearfix:after {
+/* line 78, ../sass/components/_campaign-team-individual-list.scss */
+.page-redhen-campaign-pages .views-row .clearfix:after {
   display: block !important;
 }
 @media (min-width: 320px) and (max-width: 480px) {
-  /* line 3, ../sass/components/_campaign-team-individual-list.scss */
-  .page-campaigns .views-row {
+  /* line 5, ../sass/components/_campaign-team-individual-list.scss */
+  .page-redhen-campaign-pages .views-row {
     width: 100%;
     margin-right: 2%;
     position: relative;
   }
-  /* line 83, ../sass/components/_campaign-team-individual-list.scss */
-  .page-campaigns .views-row .redhen_campaign_page_title {
+  /* line 85, ../sass/components/_campaign-team-individual-list.scss */
+  .page-redhen-campaign-pages .views-row .redhen_campaign_page_title {
     width: 100%;
   }
 }
 @media (min-width: 768px) {
-  /* line 3, ../sass/components/_campaign-team-individual-list.scss */
-  .page-campaigns .views-row {
+  /* line 5, ../sass/components/_campaign-team-individual-list.scss */
+  .page-redhen-campaign-pages .views-row {
     float: left;
     width: 48%;
     margin-right: 2%;
@@ -1691,8 +1695,8 @@ body.front #main #content {
   }
 }
 @media (min-width: 992px) {
-  /* line 3, ../sass/components/_campaign-team-individual-list.scss */
-  .page-campaigns .views-row {
+  /* line 5, ../sass/components/_campaign-team-individual-list.scss */
+  .page-redhen-campaign-pages .views-row {
     display: inline-block;
     float: left;
     margin-bottom: 2em;
@@ -1702,8 +1706,8 @@ body.front #main #content {
     position: relative;
     width: 31.33333%;
   }
-  /* line 103, ../sass/components/_campaign-team-individual-list.scss */
-  .page-campaigns .views-row:nth-child(3n+4) {
+  /* line 105, ../sass/components/_campaign-team-individual-list.scss */
+  .page-redhen-campaign-pages .views-row:nth-child(3n+4) {
     clear: both;
   }
 }
