--- a/themes/raiser/sass/components/_campaign-team-individual-list.scss
+++ b/themes/raiser/sass/components/_campaign-team-individual-list.scss
@@ -1,6 +1,6 @@
 .page-redhen-campaign-pages {
   .main-content-wrapper {
-    width: 100%; 
+    width: 100%;
   }
   .views-row {
 
@@ -57,8 +57,9 @@
     .redhen_campaign_page_title {
       font-size: em(16);
       margin-left: 1em;
+      margin-right: 1em;
       margin-top: 0;
-      width: 80%;
+      width: 87%;
     }
 
 
