--- a/themes/raiser/sass/components/_campaign-team-individual-list.scss
+++ b/themes/raiser/sass/components/_campaign-team-individual-list.scss
@@ -55,9 +55,9 @@
 
     .redhen_campaign_page_campaign,
     .redhen_campaign_page_title {
+      float: none;
       font-size: em(16);
       margin-left: 1em;
-      margin-right: 1em;
       margin-top: 0;
       width: 87%;
     }
