--- a/themes/raiser/sass/components/_social-media.scss
+++ b/themes/raiser/sass/components/_social-media.scss
@@ -9,7 +9,6 @@
     float: left;
   }
 
-
   a {
     background: url(../images/social.png) no-repeat;
     background-size: 214px;
@@ -26,7 +25,7 @@
     &.facebook-link {
       background-position: -56px 0;
     }
-    &.linkin-link {
+    &.linkedin-link {
       background-position: -112px 0;
     }
     &.googleplus-link {
