Adds redhen logo to distro

--- a/themes/raiser/sass/components/_header.scss
+++ b/themes/raiser/sass/components/_header.scss
@@ -6,7 +6,7 @@
   #logo {
     display: block; 
     float: left;
-    img { width: 3.594em; }
+    //img { width: 3.594em; }
   }
 
   #menu-toggle {
@@ -48,7 +48,7 @@
   #header {
     padding: 0.2em 1em;
 
-    #logo img { width: 40%; }
+    //#logo img { width: 40%; }
 
     #menu-toggle { display: none; }
     
