Updates social icons and base colors

--- a/themes/raiser/sass/_init.scss
+++ b/themes/raiser/sass/_init.scss
@@ -97,14 +97,14 @@ $font-monospace:   $courier;
 // Colors, etc.
 //
 // RAISER COLORS
-$primary:        #5e9733;
-$primary-widget: #CDD6C5;
-$lt-primary:     #E3EDDA;
-$action:         #f8971c;
+$primary:        #8C0000;
+$lt-primary:     #C30000;
+$action:         #EAA700;
 $black:          #000000;
 $white:          #ffffff;
 $gray:           #989898;
 $lt-gray:        #f1f1f1;
+$primary-widget: #e1e1e1;
 $page-bg:        #e5e5e5;
 
 // The amount lists, blockquotes and comments are indented.
