--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -604,7 +604,7 @@ h1 {
 
 /* line 21, ../sass/base/_base.scss */
 h2 {
-  color: #5e9733;
+  color: #8c0000;
   font-size: 1.75em;
 }
 
@@ -643,12 +643,12 @@ p {
 }
 /* line 45, ../sass/base/_base.scss */
 a, a:visited {
-  color: #f8971c;
+  color: #eaa700;
   text-decoration: none;
 }
 /* line 49, ../sass/base/_base.scss */
 a:hover, a:visited:hover {
-  color: #e48308;
+  color: #d69300;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   -o-transition: all 0.3s;
@@ -664,9 +664,9 @@ form input[type=text],
 form input[type=password],
 form input[type=email],
 form textarea {
-  border: 2px solid #5e9733;
+  border: 2px solid #8c0000;
   border-radius: 4px;
-  color: #5e9733;
+  color: #8c0000;
   padding: 0.5em;
   width: 100%;
 }
@@ -675,7 +675,7 @@ form input[type=text]:focus,
 form input[type=password]:focus,
 form input[type=email]:focus,
 form textarea:focus {
-  background: #e3edda;
+  background: #c30000;
   outline: none;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
@@ -701,7 +701,7 @@ form button {
   -webkit-box-shadow: 0 2px 3px #666666;
   -moz-box-shadow: 0 2px 3px #666666;
   box-shadow: 0 2px 3px #666666;
-  background: #f8971c;
+  background: #eaa700;
   border: 3px solid white;
   color: white;
   text-transform: uppercase;
@@ -719,7 +719,7 @@ form button:hover {
 form input[type=submit]:hover,
 form button:hover {
   color: white;
-  background: #ffab30;
+  background: #febb14;
 }
 @media (min-width: 320px) and (max-width: 480px) {
   /* line 86, ../sass/base/_base.scss */
@@ -737,9 +737,9 @@ form a.button {
   -moz-box-shadow: 0 2px 3px #666666;
   box-shadow: 0 2px 3px #666666;
   background: none;
-  border: 3px solid #5e9733;
+  border: 3px solid #8c0000;
   box-shadow: none;
-  color: #5e9733;
+  color: #8c0000;
 }
 /* line 50, ../sass/_mixins.scss */
 form a.button:hover {
@@ -750,8 +750,8 @@ form a.button:hover {
 }
 /* line 62, ../sass/_mixins.scss */
 form a.button:hover {
-  background: #5e9733;
-  border: 3px solid #90c965;
+  background: #8c0000;
+  border: 3px solid #be3232;
   color: white;
 }
 /* line 95, ../sass/base/_base.scss */
@@ -762,8 +762,8 @@ form select {
   background: transparent url(../images/select.png) no-repeat 97% center;
   background-size: 0.5em;
   border-radius: 4px;
-  border: 2px solid #5e9733;
-  color: #5e9733;
+  border: 2px solid #8c0000;
+  color: #8c0000;
   cursor: pointer;
   font-size: 14px;
   height: 36px;
@@ -1056,7 +1056,7 @@ form select, form x:-moz-any-link, form x:only-child {
   -webkit-box-shadow: 0 2px 3px #666666;
   -moz-box-shadow: 0 2px 3px #666666;
   box-shadow: 0 2px 3px #666666;
-  background: #f8971c;
+  background: #eaa700;
   border: 3px solid white;
   color: white;
   text-transform: uppercase;
@@ -1079,7 +1079,7 @@ form select, form x:-moz-any-link, form x:only-child {
 .page-redhen-campaign-edit .view-all-button a:hover,
 .page-redhen-campaign-edit .redhen_campaign_join_link a:hover {
   color: white;
-  background: #ffab30;
+  background: #febb14;
 }
 /* line 87, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign .view-all-button,
@@ -1133,7 +1133,7 @@ form select, form x:-moz-any-link, form x:only-child {
 .page-redhen-campaign-edit #block-bean-campaign-page-progress-query-con,
 .page-redhen-campaign-edit #block-bean-campaign-page-progress,
 .page-redhen-campaign-edit #block-bean-campaign-progress {
-  background: #cdd6c5;
+  background: #e1e1e1;
   padding-bottom: 2em;
   padding-top: 2em;
 }
@@ -1145,7 +1145,7 @@ form select, form x:-moz-any-link, form x:only-child {
   .page-redhen-campaign-edit #block-bean-campaign-page-progress-query-con,
   .page-redhen-campaign-edit #block-bean-campaign-page-progress,
   .page-redhen-campaign-edit #block-bean-campaign-progress {
-    color: #5e9733;
+    color: #8c0000;
     left: 0;
     margin-bottom: 0;
     width: 100%;
@@ -1216,7 +1216,7 @@ form select, form x:-moz-any-link, form x:only-child {
 
 /* line 2, ../sass/layouts/_home.scss */
 body.front #main #content {
-  border-bottom: 1px solid #5e9733;
+  border-bottom: 1px solid #8c0000;
   text-align: center;
   padding: 0 1em;
 }
@@ -1515,7 +1515,7 @@ body.front #main #content {
 }
 /* line 48, ../sass/components/_campaign-list-item.scss */
 .front #block-views-campaigns-block .views-row .redhen_campaign_title a {
-  color: #5e9733;
+  color: #8c0000;
   font-size: 1.125em;
 }
 /* line 55, ../sass/components/_campaign-list-item.scss */
@@ -1541,7 +1541,7 @@ body.front #main #content {
 .front #block-views-campaigns-block .views-row .rhc_progress {
   display: inline;
   font-size: 1em;
-  color: #f8971c;
+  color: #eaa700;
 }
 /* line 80, ../sass/components/_campaign-list-item.scss */
 .front #block-views-campaigns-block .views-row .redhen_campaign_join_link {
@@ -1567,7 +1567,7 @@ body.front #main #content {
   -webkit-box-shadow: 0 2px 3px #666666;
   -moz-box-shadow: 0 2px 3px #666666;
   box-shadow: 0 2px 3px #666666;
-  background: #f8971c;
+  background: #eaa700;
   border: 3px solid white;
   color: white;
   text-transform: uppercase;
@@ -1588,7 +1588,7 @@ body.front #main #content {
 /* line 77, ../sass/_mixins.scss */
 .front #block-views-campaigns-block .views-row .redhen_campaign_join_link a:hover {
   color: white;
-  background: #ffab30;
+  background: #febb14;
 }
 
 /* line 2, ../sass/components/_campaign-team-individual-list.scss */
@@ -1616,7 +1616,7 @@ body.front #main #content {
 }
 /* line 21, ../sass/components/_campaign-team-individual-list.scss */
 .page-redhen-campaign-pages .views-row h2 a {
-  color: #5e9733;
+  color: #8c0000;
 }
 /* line 23, ../sass/components/_campaign-team-individual-list.scss */
 .page-redhen-campaign-pages .views-row .redhen_campaign_page_team {
@@ -1630,7 +1630,7 @@ body.front #main #content {
 }
 /* line 33, ../sass/components/_campaign-team-individual-list.scss */
 .page-redhen-campaign-pages .views-row .field-name-redhen-campaign-goal {
-  color: #5e9733;
+  color: #8c0000;
   font-size: 1.375em;
   padding-left: 0.75em;
 }
@@ -1910,7 +1910,7 @@ body.front #main #content {
   -webkit-box-shadow: 0 2px 3px #666666;
   -moz-box-shadow: 0 2px 3px #666666;
   box-shadow: 0 2px 3px #666666;
-  background: #f8971c;
+  background: #eaa700;
   border: 3px solid white;
   color: white;
   text-transform: uppercase;
@@ -1930,7 +1930,7 @@ body.front #main #content {
 .page-redhen-campaign #highlighted .redhen_campaign_page_donate a:hover,
 .page-redhen-campaign #highlighted .field-type-redhen-donation a:hover {
   color: white;
-  background: #ffab30;
+  background: #febb14;
 }
 @media (max-width: 767px) {
   /* line 98, ../sass/components/_campaign_banner.scss */
@@ -1989,9 +1989,9 @@ body.front #main #content {
   -moz-box-shadow: 0 2px 3px #666666;
   box-shadow: 0 2px 3px #666666;
   background: none;
-  border: 3px solid #5e9733;
+  border: 3px solid #8c0000;
   box-shadow: none;
-  color: #5e9733;
+  color: #8c0000;
   padding: 0.4em 1em;
 }
 /* line 50, ../sass/_mixins.scss */
@@ -2003,8 +2003,8 @@ body.front #main #content {
 }
 /* line 62, ../sass/_mixins.scss */
 .page-redhen-campaign-donate .group-tribute a.fieldset-title:hover {
-  background: #5e9733;
-  border: 3px solid #90c965;
+  background: #8c0000;
+  border: 3px solid #be3232;
   color: white;
 }
 
@@ -2037,7 +2037,7 @@ body.front #main #content {
 /* line 147, ../sass/_mixins.scss */
 #block-views-campaign-donors-block tr.odd,
 #block-views-campaign-page-donors-block tr.odd {
-  background-color: #e3edda;
+  background-color: #c30000;
   border-bottom: none;
 }
 /* line 151, ../sass/_mixins.scss */
@@ -2077,7 +2077,7 @@ body.front #main #content {
 
 /* line 1, ../sass/components/_footer.scss */
 #footer-wrapper {
-  background: #5e9733;
+  background: #8c0000;
 }
 /* line 4, ../sass/components/_footer.scss */
 #footer-wrapper #main-menu h2 {
@@ -2107,7 +2107,7 @@ body.front #main #content {
 }
 /* line 24, ../sass/components/_footer.scss */
 #footer-wrapper footer .tagline {
-  color: #f8971c;
+  color: #eaa700;
   display: block;
   margin-bottom: 1em;
   font-family: Georgia, "Times New Roman", serif;
@@ -2173,7 +2173,7 @@ body.front #main #content {
 }
 /* line 82, ../sass/components/_footer.scss */
 #footer-wrapper #colophon a:hover {
-  color: #f8971c;
+  color: #eaa700;
 }
 
 @media (min-width: 768px) {
@@ -2357,7 +2357,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
 form[id^="redhen-campaign-page-add-form"] .field-name-redhen-campaign-goal .field-prefix,
 form[id^="redhen-campaign-campaign-form"] .field-name-redhen-campaign-goal .field-prefix,
 form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal .field-prefix {
-  color: #5e9733;
+  color: #8c0000;
   font-size: 1.375em;
   line-height: 1.75em;
 }
@@ -2461,9 +2461,9 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   -moz-box-shadow: 0 2px 3px #666666;
   box-shadow: 0 2px 3px #666666;
   background: none;
-  border: 3px solid #5e9733;
+  border: 3px solid #8c0000;
   box-shadow: none;
-  color: #5e9733;
+  color: #8c0000;
   cursor: pointer;
   display: inline-block;
   padding: 0.4em 1em;
@@ -2479,8 +2479,8 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
 /* line 62, ../sass/_mixins.scss */
 .form-radio:hover,
 .form-type-radio:hover {
-  background: #5e9733;
-  border: 3px solid #90c965;
+  background: #8c0000;
+  border: 3px solid #be3232;
   color: white;
 }
 /* line 147, ../sass/components/_forms.scss */
@@ -2505,8 +2505,8 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
 /* line 160, ../sass/components/_forms.scss */
 .form-radio.checked,
 .form-type-radio.checked {
-  background: #5e9733;
-  border: 3px solid #90c965;
+  background: #8c0000;
+  border: 3px solid #be3232;
   color: white;
   cursor: default;
 }
@@ -2564,7 +2564,7 @@ select::-ms-expand {
   -webkit-box-shadow: 0 2px 3px #666666;
   -moz-box-shadow: 0 2px 3px #666666;
   box-shadow: 0 2px 3px #666666;
-  background: #f8971c;
+  background: #eaa700;
   border: 3px solid white;
   color: white;
   text-transform: uppercase;
@@ -2580,7 +2580,7 @@ select::-ms-expand {
 /* line 77, ../sass/_mixins.scss */
 .page-fundraise a[href="/cafb-dc/redhen_campaign/add/general"]:hover {
   color: white;
-  background: #ffab30;
+  background: #febb14;
 }
 
 /* line 11, ../sass/components/_fundraise-workflow.scss */
@@ -2935,9 +2935,9 @@ select::-ms-expand {
   -moz-box-shadow: 0 2px 3px #666666;
   box-shadow: 0 2px 3px #666666;
   background: none;
-  border: 3px solid #5e9733;
+  border: 3px solid #8c0000;
   box-shadow: none;
-  color: #5e9733;
+  color: #8c0000;
   padding: 0.5em 0;
   display: inline-block;
   text-align: center;
@@ -2952,8 +2952,8 @@ select::-ms-expand {
 }
 /* line 62, ../sass/_mixins.scss */
 #header #secondary-menu .links li.first a:hover {
-  background: #5e9733;
-  border: 3px solid #90c965;
+  background: #8c0000;
+  border: 3px solid #be3232;
   color: white;
 }
 /* line 40, ../sass/components/_header.scss */
@@ -2995,9 +2995,9 @@ select::-ms-expand {
     -moz-box-shadow: 0 2px 3px #666666;
     box-shadow: 0 2px 3px #666666;
     background: none;
-    border: 3px solid #5e9733;
+    border: 3px solid #8c0000;
     box-shadow: none;
-    color: #5e9733;
+    color: #8c0000;
     display: inline;
     padding: 0.8em 1em;
   }
@@ -3010,8 +3010,8 @@ select::-ms-expand {
   }
   /* line 62, ../sass/_mixins.scss */
   #header #secondary-menu .links li.first a:hover {
-    background: #5e9733;
-    border: 3px solid #90c965;
+    background: #8c0000;
+    border: 3px solid #be3232;
     color: white;
   }
 }
@@ -3029,7 +3029,7 @@ select::-ms-expand {
 /* line 147, ../sass/_mixins.scss */
 .page-campaigns-leaderboard tr.odd,
 .page-campaign-pages-leaderboard tr.odd {
-  background-color: #e3edda;
+  background-color: #c30000;
   border-bottom: none;
 }
 /* line 151, ../sass/_mixins.scss */
@@ -3155,9 +3155,9 @@ select::-ms-expand {
   -moz-box-shadow: 0 2px 3px #666666;
   box-shadow: 0 2px 3px #666666;
   background: none;
-  border: 3px solid #5e9733;
+  border: 3px solid #8c0000;
   box-shadow: none;
-  color: #5e9733;
+  color: #8c0000;
   margin-left: 0em;
   margin: 0 auto;
   padding: 0.3125em 0.625em;
@@ -3175,8 +3175,8 @@ select::-ms-expand {
 /* line 62, ../sass/_mixins.scss */
 #block-views-leaderboard-block .more-link:hover,
 #block-views-leaderboard-block-team .more-link:hover {
-  background: #5e9733;
-  border: 3px solid #90c965;
+  background: #8c0000;
+  border: 3px solid #be3232;
   color: white;
 }
 /* line 85, ../sass/components/_leaderboard.scss */
@@ -3188,7 +3188,7 @@ select::-ms-expand {
 /* line 88, ../sass/components/_leaderboard.scss */
 #block-views-leaderboard-block .more-link a,
 #block-views-leaderboard-block-team .more-link a {
-  color: #5e9733;
+  color: #8c0000;
   text-transform: capitalize;
 }
 /* line 91, ../sass/components/_leaderboard.scss */
@@ -4060,13 +4060,13 @@ tr.selected td {
 }
 /* line 5, ../sass/components/_modal.scss */
 .section-media .ui-widget-content {
-  border: 4px solid #5e9733;
+  border: 4px solid #8c0000;
   padding: 0;
 }
 /* line 10, ../sass/components/_modal.scss */
 .section-media #media-browser-tabset .ui-tabs-nav {
   border: none;
-  border-bottom: 4px solid #5e9733;
+  border-bottom: 4px solid #8c0000;
   border-radius: 0;
   background: #e5e5e5;
 }
@@ -4126,7 +4126,7 @@ tr.selected td {
   -webkit-box-shadow: 0 2px 3px #666666;
   -moz-box-shadow: 0 2px 3px #666666;
   box-shadow: 0 2px 3px #666666;
-  background: #f8971c;
+  background: #eaa700;
   border: 3px solid white;
   color: white;
   text-transform: uppercase;
@@ -4145,7 +4145,7 @@ tr.selected td {
 /* line 77, ../sass/_mixins.scss */
 .section-media #media-browser-tabset .fake-ok:hover {
   color: white;
-  background: #ffab30;
+  background: #febb14;
 }
 /* line 45, ../sass/components/_modal.scss */
 .section-media #media-browser-tabset h3 {
@@ -4185,7 +4185,7 @@ tr.selected td {
 .page-redhen-campaign-donations tr.odd,
 .page-redhen-campaign-update tr.odd,
 .page-redhen-campaign-page-update tr.odd {
-  background-color: #e3edda;
+  background-color: #c30000;
   border-bottom: none;
 }
 /* line 151, ../sass/_mixins.scss */
@@ -4243,7 +4243,7 @@ tr.selected td {
   -webkit-box-shadow: 0 2px 3px #999999;
   -moz-box-shadow: 0 2px 3px #999999;
   box-shadow: 0 2px 3px #999999;
-  background: #e1ead9;
+  background: whitesmoke;
   border-radius: 5px;
   border: 3px solid white;
   height: 1em;
@@ -4259,7 +4259,7 @@ tr.selected td {
   -ms-border-radius: 3px 0 0 3px;
   -o-border-radius: 3px 0 0 3px;
   border-radius: 3px 0 0 3px;
-  background: #5e9733;
+  background: #8c0000;
   height: 100%;
   margin: 0;
 }
@@ -4272,14 +4272,14 @@ tr.selected td {
 }
 /* line 25, ../sass/components/_progress-bar.scss */
 .field-name-redhen-campaign-goal .rhc_progress {
-  color: #5e9733;
+  color: #8c0000;
   display: block;
   font-size: 2.25em;
   margin-bottom: 0.3em;
 }
 /* line 32, ../sass/components/_progress-bar.scss */
 .field-name-redhen-campaign-goal .rhc_goal {
-  color: #5e9733;
+  color: #8c0000;
 }
 
 /* line 38, ../sass/components/_progress-bar.scss */
@@ -4293,7 +4293,7 @@ tr.selected td {
 /* line 44, ../sass/components/_progress-bar.scss */
 .field-name-field-start-date .date-display-interval,
 .field-name-field-end-date .date-display-interval {
-  color: #f8971c;
+  color: #eaa700;
   font-size: 1.125em;
 }
 
@@ -4428,7 +4428,7 @@ tr.selected td {
 #block-redhen-raiser-campaign-updates-campaign-page-updates .node-campaign-update h2 a,
 .view-campaign-updates .node-campaign-update h2 a,
 .node-type-campaign-update .node-campaign-update .node-campaign-update h2 a {
-  color: #5e9733;
+  color: #8c0000;
 }
 /* line 20, ../sass/components/_updates.scss */
 #block-redhen-raiser-campaign-updates-campaign-updates .node-campaign-update h2 a:hover,
