--- a/themes/custom/raiser/sass/components/_footer.scss
+++ b/themes/custom/raiser/sass/components/_footer.scss
@@ -17,6 +17,7 @@
     #logo {
       display: block;
       margin-bottom: 1em;
+      margin-right: 0.5em;
       width: 100%;
       img { width: 3.594em; }
     }
