--- a/themes/custom/raiser/sass/components/_campaign_banner.scss
+++ b/themes/custom/raiser/sass/components/_campaign_banner.scss
@@ -61,7 +61,10 @@
     @include mobile {
       width: 100%;
       margin-top: 0;
+    }
 
+    @include small {
+      height: 82px;
     }
   }
 
@@ -83,7 +86,7 @@
     color: $white;
     float: left;
     font-size: 1.2em;
-    height: 150px;
+    height: 74px;
     margin-bottom: 0;
     max-width: none;
     padding: 0.5em 1em 0;
@@ -92,6 +95,11 @@
 
     @include mobile {
       width: 100%;
+    }
+
+    @include small {
+      bottom: 0; 
+      position: absolute;
     }
   }
 
